--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "db:push": "drizzle-kit push:pg",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev --turbo",
+    "devSlow": "next dev",
     "lint": "next lint",
     "start": "next start"
   },
