--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.0.7",
+    "@sentry/nextjs": "^7.105.0",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@uploadthing/react": "^6.5.3",
     "@vercel/postgres": "^0.8.0",
